# CPP_ICP_projekt

./: CMakeLists.txt  README.md  element.cpp  element.h  help.cpp  help.h  help.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
UML/: classdiagram.cpp  classdiagram.h  communicationdiagram.cpp  communicationdiagram.h  sequencediagram.cpp  sequencediagram.h  umlattribute.cpp  umlattribute.h  umlclass.cpp  umlclass.h  umlclassifier.cpp  umlclassifier.h  umlmessage.cpp  umlmessage.h  umloperation.cpp  umloperation.h  umlrelation.cpp  umlrelation.h
